--- a/JSONCalendar/app/views/Application/index.html
+++ b/JSONCalendar/app/views/Application/index.html
@@ -1,10 +1,10 @@
 #{extends 'main.html' /}
 #{set title:'JSONCalendar' /}
 
-<div class = "container-fluid">                                                                                         <!-- Main Division (3) -->
+<div class = "container-fluid">
     <div class = "row">
-
-        <div class = "col-sm-12 col-md-12 col-lg-12 pl-0 pr-0"> 														<!-- Carousel -->
+        <!-- Carousel -->
+        <div class = "col-sm-12 col-md-12 col-lg-12 pl-0 pr-0">
             <div id = "slider" class = "carousel slide" data-ride = "carousel">
 
                 <!-- indicators (dot nov in bootstrap3) -->
@@ -13,36 +13,39 @@
                     <li data-target="#slider" data-slide-to="1"></li>
                     <li data-target="#slider" data-slide-to="2"></li>
                     <li data-target="#slider" data-slide-to="3"></li>
+                    <li data-target="#slider" data-slide-to="4"></li>
+                    <li data-target="#slider" data-slide-to="5"></li>
+                    <li data-target="#slider" data-slide-to="6"></li>
+                    <li data-target="#slider" data-slide-to="7"></li>
+                    <li data-target="#slider" data-slide-to="8"></li>
+                    <li data-target="#slider" data-slide-to="9"></li>
+                    <li data-target="#slider" data-slide-to="10"></li>
+                    <li data-target="#slider" data-slide-to="11"></li>
+                    <li data-target="#slider" data-slide-to="12"></li>
                 </ol>
 
                 <!-- wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
+                <div class="carousel-inner" id="calendarTb">
                     <div class="carousel-item active">
-                        <img src="@{'/public/images/c0.jpg'}"/>
-                    </div>
-
-                    <div class="carousel-item">
-                        <img src="@{'/public/images/c1.jpg'}"/>
-                    </div>
-
-                    <div class="carousel-item">
-                        <img src="@{'/public/images/c2.jpg'}">
-                    </div>
-
-                    <div class="carousel-item">
-                        <img src="@{'/public/images/c4.jpg'}"/>
+                        <table class= "container" border="2">
+                            <tr>
+                                <td class="frontCal">
+                                    2019 Calendar
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
 
                 <!-- controls / Next & Prev -->
                 <a class="carousel-control-prev" href="#slider" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
+                    <div id="chevron-arrow-left"></div>
                 </a>
 
                 <a class="carousel-control-next" href="#slider" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
+                    <div id="chevron-arrow-right"></div>
                 </a>
-            </div>
         </div>
     </div>
+</div>
 </div>
