--- a/JSONCalendar/public/sass/stylesheets/screen.css
+++ b/JSONCalendar/public/sass/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,55 +24,143 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
 
 /* line 1, ../sass/_index.scss */
 body {
-  background-color: lightblue;
+  background-image: url("https://i.pinimg.com/originals/57/bb/66/57bb66cb4895565d755910654a6b0c80.jpg");
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-/* line 5, ../sass/_index.scss */
-table, tr, td, th {
-  border: 1px solid black;
+/* line 10, ../sass/_index.scss */
+div {
+  cursor: pointer;
+}
+
+/* line 14, ../sass/_index.scss */
+table {
+  width: 100%;
+  height: 100%;
+  background: black;
+  background: rgba(255, 255, 255, 0.4);
+}
+
+/* line 21, ../sass/_index.scss */
+.month {
+  background-color: #404247;
+  color: white;
+  font-size: 20px;
+}
+
+/* line 27, ../sass/_index.scss */
+tr, td, th {
+  border: 1px solid #595959;
+  text-align: center;
+  padding: 20px;
+  font-size: 16px;
+  font-family: 'Bowlby One SC', cursive;
+}
+
+/* line 35, ../sass/_index.scss */
+.frontCal {
+  padding: 167px;
+  font-family: 'Pacifico', cursive;
+  font-size: 80px;
+  background-color: #404247;
+  color: white;
+}
+
+/* line 47, ../sass/_index.scss */
+#Week1 td:nth-child(6n+1) {
+  color: red;
+}
+
+/* line 51, ../sass/_index.scss */
+#Week2 td:nth-child(6n+1) {
+  color: red;
+}
+
+/* line 55, ../sass/_index.scss */
+#Week3 td:nth-child(6n+1) {
+  color: red;
+}
+
+/* line 59, ../sass/_index.scss */
+#Week4 td:nth-child(6n+1) {
+  color: red;
+}
+
+/* line 63, ../sass/_index.scss */
+#Week5 td:nth-child(6n+1) {
+  color: red;
+}
+
+/* line 67, ../sass/_index.scss */
+#Week6 td:nth-child(6n+1) {
+  color: red;
+}
+
+/* line 71, ../sass/_index.scss */
+#chevron-arrow-left {
+  display: inline-block;
+  border-right: 4px solid black;
+  border-bottom: 4px solid black;
+  width: 15px;
+  height: 15px;
+  transform: rotate(-225deg);
+}
+
+/* line 80, ../sass/_index.scss */
+#chevron-arrow-right {
+  display: inline-block;
+  border-right: 4px solid black;
+  border-bottom: 4px solid black;
+  width: 15px;
+  height: 15px;
+  transform: rotate(-45deg);
 }
