JSON Calendar second checking

--- a/JSONCalendar/app/views/Application/index.html
+++ b/JSONCalendar/app/views/Application/index.html
@@ -29,9 +29,9 @@
                     <div class="carousel-item active">
                         <table class= "container" border="2">
                             <tr>
-                                <td class="frontCal">
+                                <th class="frontCal">
                                     2019 Calendar
-                                </td>
+                                </th>
                             </tr>
                         </table>
                     </div>
